// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the button as active 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<button
  class="Button Button--primary Button--medium Button--is-active"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="emotion-0 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Active button
    </span>
  </span>
</button>
`;

exports[`renders the button as an external link 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<a
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  href="/"
  rel="noreferrer noopener"
  target="_blank"
  type="button"
>
  <span
    class="emotion-0 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Button link
    </span>
  </span>
</a>
`;

exports[`renders the button as link 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<a
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  href="/"
  type="button"
>
  <span
    class="emotion-0 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Button link
    </span>
  </span>
</a>
`;

exports[`renders the component 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<button
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="emotion-0 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component as naked 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<button
  class="Button Button--naked Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="emotion-0 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component as primary 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<button
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="emotion-0 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component disabled 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<button
  class="Button Button--primary Button--medium Button--disabled"
  data-test-id="cf-ui-button"
  disabled=""
  type="button"
>
  <span
    class="emotion-0 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component full width 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<button
  class="Button Button--primary Button--medium Button--full-width"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="emotion-0 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component in loading state 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  6.666667% {
    -webkit-transform: scale(1.5,0.5);
    -ms-transform: scale(1.5,0.5);
    transform: scale(1.5,0.5);
  }

  13.333333% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  26.666667% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  33.333333% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  40% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  53.333333% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  60% {
    -webkit-transform: scale(1.5,0.5);
    -ms-transform: scale(1.5,0.5);
    transform: scale(1.5,0.5);
  }

  66.666667% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  100% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  13.333333% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  20% {
    -webkit-transform: scale(1.5,0.5);
    -ms-transform: scale(1.5,0.5);
    transform: scale(1.5,0.5);
  }

  26.666667% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  40% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  46.666667% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  53.333333% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  66.666667% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  73.333333% {
    -webkit-transform: scale(1.5,0.5);
    -ms-transform: scale(1.5,0.5);
    transform: scale(1.5,0.5);
  }

  80% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  100% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }
}

@keyframes animation-2 {
  0% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  26.666667% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  33.333333% {
    -webkit-transform: scale(1.5,0.5);
    -ms-transform: scale(1.5,0.5);
    transform: scale(1.5,0.5);
  }

  40% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  53.333333% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  60% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  66.666667% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  80% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  86.666667% {
    -webkit-transform: scale(1.5,0.5);
    -ms-transform: scale(1.5,0.5);
    transform: scale(1.5,0.5);
  }

  93.333333% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }

  100% {
    -webkit-transform: scale(1,1);
    -ms-transform: scale(1,1);
    transform: scale(1,1);
  }
}

@keyframes animation-3 {
  0% {
    -webkit-transform: translate(10px,33.528168px);
    -ms-transform: translate(10px,33.528168px);
    transform: translate(10px,33.528168px);
  }

  6.666667% {
    -webkit-transform: translate(10px,41.764084px);
    -ms-transform: translate(10px,41.764084px);
    transform: translate(10px,41.764084px);
  }

  13.333333% {
    -webkit-transform: translate(10px,33.528168px);
    -ms-transform: translate(10px,33.528168px);
    transform: translate(10px,33.528168px);
  }

  26.666667% {
    -webkit-transform: translate(10px,-2.651608px);
    -ms-transform: translate(10px,-2.651608px);
    transform: translate(10px,-2.651608px);
  }

  33.333333% {
    -webkit-transform: translate(10px,-4.471832px);
    -ms-transform: translate(10px,-4.471832px);
    transform: translate(10px,-4.471832px);
  }

  40% {
    -webkit-transform: translate(10px,-2.651608px);
    -ms-transform: translate(10px,-2.651608px);
    transform: translate(10px,-2.651608px);
  }

  53.333333% {
    -webkit-transform: translate(10px,33.528168px);
    -ms-transform: translate(10px,33.528168px);
    transform: translate(10px,33.528168px);
  }

  60% {
    -webkit-transform: translate(10px,41.764084px);
    -ms-transform: translate(10px,41.764084px);
    transform: translate(10px,41.764084px);
  }

  66.666667% {
    -webkit-transform: translate(10px,33.528168px);
    -ms-transform: translate(10px,33.528168px);
    transform: translate(10px,33.528168px);
  }

  100% {
    -webkit-transform: translate(10px,33.528168px);
    -ms-transform: translate(10px,33.528168px);
    transform: translate(10px,33.528168px);
  }
}

@keyframes animation-4 {
  0% {
    -webkit-transform: translate(30px,33.528168px);
    -ms-transform: translate(30px,33.528168px);
    transform: translate(30px,33.528168px);
  }

  13.333333% {
    -webkit-transform: translate(30px,33.528168px);
    -ms-transform: translate(30px,33.528168px);
    transform: translate(30px,33.528168px);
  }

  20% {
    -webkit-transform: translate(30px,41.764084px);
    -ms-transform: translate(30px,41.764084px);
    transform: translate(30px,41.764084px);
  }

  26.666667% {
    -webkit-transform: translate(30px,33.528168px);
    -ms-transform: translate(30px,33.528168px);
    transform: translate(30px,33.528168px);
  }

  40% {
    -webkit-transform: translate(30px,-2.651608px);
    -ms-transform: translate(30px,-2.651608px);
    transform: translate(30px,-2.651608px);
  }

  46.666667% {
    -webkit-transform: translate(30px,-4.471832px);
    -ms-transform: translate(30px,-4.471832px);
    transform: translate(30px,-4.471832px);
  }

  53.333333% {
    -webkit-transform: translate(30px,-2.651608px);
    -ms-transform: translate(30px,-2.651608px);
    transform: translate(30px,-2.651608px);
  }

  66.666667% {
    -webkit-transform: translate(30px,33.528168px);
    -ms-transform: translate(30px,33.528168px);
    transform: translate(30px,33.528168px);
  }

  73.333333% {
    -webkit-transform: translate(30px,41.764084px);
    -ms-transform: translate(30px,41.764084px);
    transform: translate(30px,41.764084px);
  }

  80% {
    -webkit-transform: translate(30px,33.528168px);
    -ms-transform: translate(30px,33.528168px);
    transform: translate(30px,33.528168px);
  }

  100% {
    -webkit-transform: translate(30px,33.528168px);
    -ms-transform: translate(30px,33.528168px);
    transform: translate(30px,33.528168px);
  }
}

@keyframes animation-5 {
  0% {
    -webkit-transform: translate(50px,33.528168px);
    -ms-transform: translate(50px,33.528168px);
    transform: translate(50px,33.528168px);
  }

  26.666667% {
    -webkit-transform: translate(50px,33.528168px);
    -ms-transform: translate(50px,33.528168px);
    transform: translate(50px,33.528168px);
  }

  33.333333% {
    -webkit-transform: translate(50px,41.764084px);
    -ms-transform: translate(50px,41.764084px);
    transform: translate(50px,41.764084px);
  }

  40% {
    -webkit-transform: translate(50px,33.528168px);
    -ms-transform: translate(50px,33.528168px);
    transform: translate(50px,33.528168px);
  }

  53.333333% {
    -webkit-transform: translate(50px,-2.651608px);
    -ms-transform: translate(50px,-2.651608px);
    transform: translate(50px,-2.651608px);
  }

  60% {
    -webkit-transform: translate(50px,-4.471832px);
    -ms-transform: translate(50px,-4.471832px);
    transform: translate(50px,-4.471832px);
  }

  66.666667% {
    -webkit-transform: translate(50px,-2.651608px);
    -ms-transform: translate(50px,-2.651608px);
    transform: translate(50px,-2.651608px);
  }

  80% {
    -webkit-transform: translate(50px,33.528168px);
    -ms-transform: translate(50px,33.528168px);
    transform: translate(50px,33.528168px);
  }

  86.666667% {
    -webkit-transform: translate(50px,41.764084px);
    -ms-transform: translate(50px,41.764084px);
    transform: translate(50px,41.764084px);
  }

  93.333333% {
    -webkit-transform: translate(50px,33.528168px);
    -ms-transform: translate(50px,33.528168px);
    transform: translate(50px,33.528168px);
  }

  100% {
    -webkit-transform: translate(50px,33.528168px);
    -ms-transform: translate(50px,33.528168px);
    transform: translate(50px,33.528168px);
  }
}

.emotion-8 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  -webkit-animation: animation-0 1s linear infinite normal forwards;
  animation: animation-0 1s linear infinite normal forwards;
}

.emotion-2 {
  -webkit-animation: animation-1 1s linear infinite normal forwards;
  animation: animation-1 1s linear infinite normal forwards;
}

.emotion-4 {
  -webkit-animation: animation-2 1s linear infinite normal forwards;
  animation: animation-2 1s linear infinite normal forwards;
}

.emotion-1 {
  -webkit-animation: animation-3 1s linear infinite normal forwards;
  animation: animation-3 1s linear infinite normal forwards;
}

.emotion-3 {
  -webkit-animation: animation-4 1s linear infinite normal forwards;
  animation: animation-4 1s linear infinite normal forwards;
}

.emotion-5 {
  -webkit-animation: animation-5 1s linear infinite normal forwards;
  animation: animation-5 1s linear infinite normal forwards;
}

.emotion-6 {
  display: block;
  fill: #f7f9fa;
}

.emotion-7 {
  display: inline-block;
  height: 12px;
  vertical-align: middle;
  width: 12px;
}

<button
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="emotion-8 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
    <div
      class="Button__spinner emotion-7"
      data-test-id="cf-ui-spinner"
    >
      <svg
        class="emotion-6"
        viewBox="0 0 60 51"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Loading…
        </title>
        <g
          class="emotion-1"
          transform="translate(10,33.528168)"
        >
          <g
            class="emotion-0"
          >
            <circle
              r="6"
              transform="translate(0,10.471832)"
            />
          </g>
        </g>
        <g
          class="emotion-3"
          transform="translate(30,33.528168)"
        >
          <g
            class="emotion-2"
          >
            <circle
              r="6"
              transform="translate(0,10.471832)"
            />
          </g>
        </g>
        <g
          class="emotion-5"
          transform="translate(50,33.528168)"
        >
          <g
            class="emotion-4"
          >
            <circle
              r="6"
              transform="translate(0,10.471832)"
            />
          </g>
        </g>
      </svg>
    </div>
  </span>
</button>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<button
  class="Button my-extra-class Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="emotion-0 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component with dropdown indicator 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #ffffff;
  height: 18px;
  width: 18px;
}

<button
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="emotion-1 Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed Entry
    </span>
    <svg
      class="Button__dropdown-icon emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
      />
    </svg>
  </span>
</button>
`;

exports[`renders the component with icon 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #ffffff;
  height: 18px;
  width: 18px;
}

<button
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="emotion-1 Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Button__icon emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M18.7071 15.7071C18.3166 16.0976 17.6834 16.0976 17.2929 15.7071L12 10.4142L6.70711 15.7071C6.31659 16.0976 5.68342 16.0976 5.2929 15.7071C4.90237 15.3166 4.90237 14.6834 5.2929 14.2929L11.2929 8.29289C11.6834 7.90237 12.3166 7.90237 12.7071 8.29289L18.7071 14.2929C19.0976 14.6834 19.0976 15.3166 18.7071 15.7071Z"
      />
    </svg>
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;
